--- a/app.html
+++ b/app.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./build/app.min.css">
 </head>
 <body>
     
+    <div id="icon"></div>
 
-    <script src="./build/app.min.js"></script>
+    <img src="./images/da.png" alt="">
 </body>
 </html>
